--- a/.env
+++ b/.env
@@ -5,9 +5,9 @@ EMAIL_APP_PASSWORD =urfdvqiazvjprssi
 EMAIL_APP =quyquanght18@gmail.com
 BASE_URL=http://localhost:3000/
 
-DB_DATABASE_NAME=api_cleanroom
-DB_USERNAME=root
-DB_PASSWORD=
-DB_HOST=
-DB_PORT=
-DDB_DATABASE_URL=
+DB_DATABASE_NAME=railway
+DB_USERNAME=postgres
+DB_PASSWORD=seVTA3Y90tbVJwY8WQh1
+DB_HOST=containers-us-west-168.railway.app
+DB_PORT=6254
+DB_DATABASE_URL=postgresql://${{ PGUSER }}:${{ PGPASSWORD }}@${{ PGHOST }}:${{ PGPORT }}/${{ PGDATABASE }}
