--- a/.env
+++ b/.env
@@ -5,9 +5,10 @@ EMAIL_APP_PASSWORD =urfdvqiazvjprssi
 EMAIL_APP =quyquanght18@gmail.com
 BASE_URL=http://localhost:3000/
 
-DB_USERNAME=root
-DB_PASSWORD=18091998qQ@
-DB_DATABASE_NAME=
-DB_HOST=localhost
-DB_PORT=
-DB_DIALECT=
+DB_USERNAME=postgres
+DB_PASSWORD=0358877722qQ@
+DB_DATABASE_NAME=postgres
+DB_HOST=db.cyxxrfygptmdbzpalbkz.supabase.co
+DB_PORT=5432
+DB_DIALECT=postgres
+DB_SSL=true
