--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "babel-node": "babel-node --presets=latest",
     "start": "nodemon --exec babel-node src/server.js",
-    "build-src":"babel src -d build --coppy-files"
+    "build-src": "babel src -d build --coppy-files"
   },
   "repository": {
     "type": "git",
@@ -28,8 +28,8 @@
     "moment": "^2.29.4",
     "mysql2": "^2.2.5",
     "nodemailer": "^6.8.0",
-    "pg": "8.7.1",
-    "pg-hstore": "2.3.4",
+    "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.25.8",
     "tedious": "^15.1.2"
   },
