--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 
 PORT =8080
 NODE_ENV = development
-EMAIL_APP_PASSWORD =urfdvqiazvjprssi
+EMAIL_APP_PASSWORD =deapmuoehnwmxcqb
 EMAIL_APP =quyquanght18@gmail.com
 BASE_URL=http://localhost:3000/
 
@@ -12,3 +12,11 @@ DB_HOST=db.cyxxrfygptmdbzpalbkz.supabase.co
 DB_PORT=5432
 DB_DIALECT=postgres
 DB_SSL=true
+
+# DB_USERNAME=root
+# DB_PASSWORD=
+# DB_DATABASE_NAME=api_cleanroom
+# DB_HOST=127.0.0.1
+# DB_PORT=
+# DB_DIALECT=mysql
+# DB_SSL=false
