--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ NODE_ENV = development
 EMAIL_APP_PASSWORD =deapmuoehnwmxcqb
 EMAIL_APP =quyquanght18@gmail.com
 BASE_URL=http://localhost:3000/
-
+URL_REACT=https://fe-clean-room.vercel.app/
 DB_USERNAME=postgres
 DB_PASSWORD=0358877722qQ@
 DB_DATABASE_NAME=postgres
