--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@
 /.idea
 .idea/
 package-lock.json
-# build artifacts
-dist
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 .env
+
