--- a/.env.example
+++ b/.env.example
@@ -3,10 +3,13 @@ NODE_ENV =
 EMAIL_APP_PASSWORD =
 EMAIL_APP =
 BASE_URL=
-
-DB_DATABASE_NAME=
+URL_REACT=
 DB_USERNAME=
 DB_PASSWORD=
+DB_DATABASE_NAME=
 DB_HOST=
 DB_PORT=
-DDB_DATABASE_URL=
+DB_DIALECT=
+DB_SSL=
+SECRET_JWT=
+EXPIRES_JWT=
