--- a/package.json
+++ b/package.json
@@ -33,14 +33,13 @@
     "nodemailer": "^6.8.0",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.25.8",
-    "tedious": "^15.1.2"
+    "sequelize": "^6.25.8"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/node": "^7.12.10",
     "@babel/preset-env": "^7.12.10",
     "nodemon": "^2.0.7",
-    "sequelize-cli": "^6.5.2"
+    "sequelize-cli": "^6.2.0"
   }
 }
